--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
 	</parent>
 	<groupId>com.mystyle</groupId>
 	<artifactId>shopping-product-management-service</artifactId>
-	<version>:0.0.1</version>
+	<version>0.0.1</version>
 	<name>shopping-product-management-service</name>
 	<description>for product management</description>
 
